kubernetes/staging/set-docker-secret.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugone-api
spec:
  template:
    spec:
      imagePullSecrets:
        - name: dockerhub-staging
