kubernetes/staging/ingress-hubly.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plugone-api
  annotations:
    kubernetes.io/ingress.class: nginx-gohubly
spec:
  rules:
  - host: api-staging.gohubly.com
    http:
      paths:
      - backend:
          serviceName: plugone-api-staging
          servicePort: 80
