kubernetes/staging/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plugone-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api-staging.plugone.io
    http:
      paths:
      - backend:
          serviceName: plugone-api-staging
          servicePort: 80
